[gd_scene load_steps=4 format=3 uid="uid://bii0soii3h7ui"]

[ext_resource type="Script" path="res://items/settings/SaveLoadItemActions.gd" id="1_xqlqn"]
[ext_resource type="PackedScene" uid="uid://b04xuqmeddq78" path="res://ui/sections/ItemActionHeader.tscn" id="2_qfwyn"]
[ext_resource type="Script" path="res://items/settings/SaveLoadContainer.gd" id="3_y5bfs"]

[node name="SaveLoadItemActions" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_xqlqn")

[node name="ItemActionHeader" parent="." instance=ExtResource("2_qfwyn")]

[node name="SaveGameContainer" type="HBoxContainer" parent="."]
offset_top = 27.0
offset_right = 1024.0
offset_bottom = 58.0

[node name="SaveFileLabel" type="LineEdit" parent="SaveGameContainer"]
custom_minimum_size = Vector2(300, 0)
offset_right = 926.0
offset_bottom = 31.0
size_flags_horizontal = 3

[node name="NewSaveButton" type="Button" parent="SaveGameContainer"]
offset_left = 930.0
offset_right = 1024.0
offset_bottom = 31.0
text = "Save Game"

[node name="SaveLoadContainer" type="VBoxContainer" parent="."]
offset_top = 62.0
offset_right = 1024.0
offset_bottom = 62.0
script = ExtResource("3_y5bfs")
